<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/title_array_flower"
        android:id="@+id/flower"
        android:icon="@drawable/ic_flower"
        app:iconSize="24dp" />

    <item android:title="@string/title_add_flower"
        android:id="@+id/add_flower"
        android:icon="@drawable/ic_add_flower"
        app:iconSize="24dp" />

    <item android:title="@string/title_add_invoice"
        android:id="@+id/add_invoice"
        android:icon="@drawable/ic_add_invoice"
        app:iconSize="24dp" />

    <item android:title="@string/title_excepted_invoice"
        android:id="@+id/excepted_invoice"
        android:icon="@drawable/ic_invoice"
        app:iconSize="24dp" />

    <item android:title="@string/title_history_invoice"
        android:id="@+id/invoice"
        android:icon="@drawable/ic_history"
        app:iconSize="24dp" />

    <item android:title="@string/title_report"
        android:id="@+id/report"
        android:icon="@drawable/ic_report"
        app:iconSize="24dp" />
</menu>