<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:layout_marginBottom="58dp"
    android:id="@+id/scrollViewAddFlower"
    tools:context=".ui.home.fragment.AddFlowerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_add_flower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/title_add_flower"
            android:textColor="?attr/colorPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imgHoa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:background="?attr/colorSurface"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_photo"
                tools:ignore="ImageContrastCheck" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnPickImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp"
            android:text="@string/action_set_image"
            android:textAllCaps="false"
            app:cornerRadius="25dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:text="@string/name_flower"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtTenHoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_flower"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:text="@string/price_in"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtGiaNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price_in"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:text="@string/price"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtGiaBan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/action_save_flower"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="25dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

</ScrollView>