<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2dp"
        android:text="@string/price_in"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtGiaNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_price_in"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="2dp"
        android:text="@string/price"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtGiaBan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_price"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

</LinearLayout>
