<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.edit_flower.EditFlowerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="3dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_arrow"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/title_edit_flower"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:gravity="center"
                android:paddingEnd="26dp"
                android:paddingStart="0dp"
                android:textStyle="bold"
                android:textColor="@color/my_light_primary"
                android:textSize="30sp"
                android:text="@string/title_edit_flower" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="250dp"
            android:layout_height="188dp"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">
            <ImageView
                android:id="@+id/imgHoa"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="@drawable/background_img"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_photo"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnPickImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="0dp"
            android:text="@string/action_set_image"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:text="@string/name_flower"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtTenHoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_flower"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:text="@string/price_in"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtGiaNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price_in"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="2dp"
            android:text="@string/price"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtGiaBan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/action_save_flower"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

</ScrollView>