<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:scrollbars="none"
    android:id="@+id/scrollViewAddInvoice"
    tools:context=".ui.home.fragment.AddInvoiceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Thông tin khách hàng -->
        <TextView
            android:id="@+id/title_add_flower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:text="@string/title_add_invoice"
            android:textColor="?android:attr/colorPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name_customer"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCustomerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập tên khách hàng"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            android:minHeight="48dp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sdt"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCustomerPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập số điện thoại"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textSize="16sp"
            android:minHeight="48dp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_address"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCustomerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập địa chỉ"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            android:minHeight="48dp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_sale"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtSale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập giảm giá(k)"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="16sp"
            android:minHeight="48dp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_note"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nhập ghi chú"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textSize="16sp"
            android:minHeight="48dp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/textViewDateTimeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ngày:"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/edtDateInvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_date"
                android:drawableTint="@android:color/darker_gray"
                android:focusable="false"
                android:textSize="17sp"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="48dp"
                android:textStyle="bold"
                tools:ignore="KeyboardInaccessibleWidget,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnAddFlower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/action_add_flower_invoice"
            android:textAllCaps="false"
            app:cornerRadius="25dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        <!-- Danh sách hoa đã chọn -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInvoiceFlowers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="-6dp"
            android:layout_marginEnd="-6dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_paymen_method"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:checked="true"
                    android:text="@string/action_crash"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/rb_transfer"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/action_transfer"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_order_status_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trạng thái đơn hàng"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <RadioGroup
                android:id="@+id/rg_order_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_not_yet"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="8dp"
                    android:checked="true"
                    android:text="@string/action_wait_ship"
                    android:textColor="@color/orange"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                <RadioButton
                    android:id="@+id/rb_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/action_complete_ship"
                    android:textColor="@color/my_light_primary"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/divider_line" />
        <!-- Tổng kết -->
        <TextView
            android:id="@+id/txtCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="Tổng: 0 bó"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtTotalIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="Tổng thu: 0k"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/txtTotalProfit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            android:text="Tổng lợi nhuận: 0k"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btnSaveInvoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:padding="12dp"
            android:text="@string/action_save_invoice"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="25dp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize,TouchTargetSizeCheck" />

    </LinearLayout>

</ScrollView>
