<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/card_bg"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/item_ripple"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <CheckBox
            android:id="@+id/cbSelect"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:ignore="TouchTargetSizeCheck"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="1dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imgFlower"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_photo" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="-2dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/name_flower"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtPriceIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_in"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:padding="6dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_edit"
            app:tint="?android:attr/textColorPrimary"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.cardview.widget.CardView>